--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -5,9 +5,6 @@
   position: relative;
   transition: width 0.3s;
 }
-.collapsed {
-  width: var(--sidebar-width-collapsed);
-}
 
 .switchers {
   position: absolute;
@@ -16,3 +13,42 @@
   justify-content: center;
   width: 100%;
 }
+
+
+
+.collapseBtn {
+  position: absolute;
+  right: -32px;
+  bottom: 32px;
+}
+.items {
+  margin-top: 20px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+.link {
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  opacity: 1;
+}
+.item {
+  margin-top: 10px;
+  display: flex;
+}
+.icon {
+  fill: var(--inverted-primary-color);
+}
+.collapsed {
+   width: var(--sidebar-width-collapsed);
+   .switchers {
+     flex-direction: column;
+     align-items: center;
+   }
+  .link {
+    opacity: 0;
+    transition: 0.2s opacity;
+    width: 0;
+  }
+ }
