--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -9,6 +9,10 @@
   color: var(--primary-color);
   min-height: 100vh;
 }
+.app_modal {
+  font: var(--font-m);
+  color: var(--primary-color);
+}
 
 .content-page {
   display: flex;
